--- a/resources/css/frontend/events.css
+++ b/resources/css/frontend/events.css
@@ -172,8 +172,8 @@
 
 .all-events-header h1 {
     font-size: 2.5rem;
-    font-weight: 600;
-    color: var(--primary-dark);
+    font-weight: 400;
+    color: var(--spaceblack);
     margin-bottom: 0.5rem;
 }
 
